--- a/package.json
+++ b/package.json
@@ -1,23 +1,54 @@
 {
-  "name": "lp",
+  "name": "reactsetup",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev -p 3001",
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "@apollo/client": "^3.5.6",
+    "@types/styled-system": "^5.1.13",
+    "antd": "^4.18.7",
+    "aos": "^2.3.4",
+    "apollo-client": "^2.6.10",
+    "apollo-server": "^3.5.0",
+    "browserslist": "^4.18.1",
+    "framer-motion": "^5.4.4",
+    "graphql": "^16.1.0",
+    "lodash": "^4.17.21",
+    "mercadopago": "^1.5.12",
+    "moment": "^2.29.1",
+    "next": "9.5.2",
+    "next-images": "^1.4.1",
+    "next-with-apollo": "^5.2.1",
+    "nodemon": "^2.0.15",
+    "ramda": "^0.27.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-reveal": "^1.2.2",
+    "react-sdk-mercadopago": "^1.1.1",
+    "styled-components": "^5.3.3",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.16",
-    "@types/react": "17.0.39",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "@types/styled-components": "^5.1.16",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.1.0",
+    "typescript": "^4.0.2"
   }
 }
