--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "antd": "^4.17.2",
     "dotenv": "^10.0.0",
+    "ethers": "^6.13.4",
     "framer-motion": "^4.1.17",
     "graphql": "^16.0.1",
     "next": "12.0.4",
